SecurityGroup.tf
resource "aws_security_group" "PublicEC2_sg" {
  name        = "PublicEC2_sg"
  description = "allow ssh on 22 & http on port 80"
  vpc_id = aws_vpc.vpc_ITI.id

  ingress {
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "PrivateEC2_sg" {
  name        = "PrivateEC2_sg"
  description = "allow outbounds connections only"
  vpc_id = aws_vpc.vpc_ITI.id

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
}
